# clawden

./: .clippy.toml  .gitignore  AGENTS.md  Cargo.toml  INIT.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: plan.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  docker.yml  publish.yml
.husky/: pre-commit  pre-push
crates/clawden-adapters/: Cargo.toml
crates/clawden-adapters/src/: docker_adapter.rs  docker_runtime.rs  lib.rs  nanoclaw.rs  openclaw.rs  openfang.rs  picoclaw.rs  registry.rs  zeroclaw.rs
crates/clawden-cli/: Cargo.toml
crates/clawden-config/: Cargo.toml
crates/clawden-core/: Cargo.toml
crates/clawden-server/: Cargo.toml
crates/clawlab-adapters/: Cargo.toml
crates/clawlab-cli/: Cargo.toml
crates/clawlab-config/: Cargo.toml
crates/clawlab-core/: Cargo.toml
crates/clawlab-server/: Cargo.toml
crates/clawlab-server/src/: audit.rs  lifecycle.rs  main.rs  manager.rs
dashboard/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.test.ts  App.tsx  index.css  main.tsx
docker/: .env.example  Dockerfile  defaults.toml  docker-compose.yml  entrypoint.sh
npm/clawden/: package.json  postinstall.js
scripts/: add-platform-deps.ts  copy-platform-binaries.sh  generate-platform-manifests.ts  prepare-publish.ts  publish-main-packages.ts  publish-platform-packages.ts  restore-packages.ts  sync-versions.ts  validate-no-workspace-protocol.ts
sdk/: package.json
sdk/src/: index.test.ts  index.ts
specs/001-clawlab-mvp/: README.md
(+185 files in other folders)
