[package]
edition.workspace = true
license.workspace = true
name = "clawden-adapters"
version.workspace = true

[features]
default = ["openclaw", "zeroclaw", "picoclaw", "nanoclaw", "openfang"]
nanoclaw = []
openclaw = []
openfang = []
picoclaw = []
zeroclaw = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clawden-core = {path = "../clawden-core"}
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
