[package]
name = "clawlab-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clawlab-adapters = { path = "../clawlab-adapters" }
clawlab-core = { path = "../clawlab-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
